update name table db
