# app/Http/Requests/UpdateLibRequest.php
@@ -22,9 +22,9 @@ class UpdateLibRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'book_name' => ['required', 'string', 'min:3', 'max:255'],
-            'book_author' => ['required', 'string', 'min:3', 'max:255'],
-            'book_year' => ['required', 'string', 'min:3', 'max:255'],
+            'name' => ['required', 'string', 'min:3', 'max:255'],
+            'author' => ['required', 'string', 'min:3', 'max:255'],
+            'year' => ['required', 'string', 'min:3', 'max:255'],
         ];
     }
 }
